<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_first_access">FirstAccessActivity</string>
    <string name="carriera">Carriera</string>
    <string name="piano_studi">Piano di studi</string>
    <string name="stima">Stima</string>
    <string name="statistiche">Statistiche</string>
    <string name="title_activity_carriera">Carriera</string>
    <string name="title_activity_stima">Stima</string>
    <string name="title_activity_piano_studi">PianoStudi</string>
    <string name="title_activity_statistiche">Statistiche</string>
    <string name="title_activity_calendar_chooser">Calendar Chooser</string>
    <string name="add_exam_date">Aggiungi data esame</string>
    <string name="title_esame_list">Esami</string>
    <string name="title_esame_detail">Esame Detail</string>
    <string name="general">Generali</string>
    <string name="andamento_voti">Andamento \nVoti</string>
    <string name="andamento_media_ponderata">Andamento \nmedia \nponderata</string>
    <string name="andamento_media_aritmetica">Andamento \nmedia \naritmetica</string>
    <string name="title_activity_general_stat">Statistiche generali</string>
    <string name="title_activity_andamento_voti">Andamento Voti</string>
    <string name="title_activity_andamento_media_aritmetica">Andamento Media Aritmetica</string>
    <string name="title_activity_andamento_media_ponderata">Andamento Media Ponderata</string>
    <string name="title_activity_add_exam">Aggiungi Esame</string>
    <string name="title_activity_add_event">Aggiungi Evento</string>

    <string name="str_cnt_mnu_edit">Edit</string>
    <string name="str_cnt_mnu_share">Share</string>
    <string name="str_cnt_mnu_delete">Delete</string>

    <string name="exam_prompt">Scegli l\'esame</string>

    <string name="name_exam_textView">Nome esame: </string>
    <string name="prof_name_textView">Nome docente: </string>
    <string name="in_data_textView">In data:</string>
    <string name="voto_textView">Voto: </string>

</resources>