<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/carriera"
        android:id="@+id/carriera_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/piano_studi"
        android:id="@+id/piano_studi_button"
        android:layout_alignTop="@+id/carriera_button"
        android:layout_toEndOf="@+id/carriera_button"/>

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/stima"
        android:id="@+id/stima_button"
        android:layout_below="@+id/carriera_button"
        android:layout_alignStart="@+id/carriera_button"/>

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/statistiche"
        android:id="@+id/statistiche_button"
        android:layout_alignTop="@+id/stima_button"
        android:layout_alignStart="@+id/piano_studi_button"
        />

</RelativeLayout>