<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/orange"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/general"
        android:id="@+id/general_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/andamento_voti"
        android:id="@+id/andamento_voti_button"
        android:layout_alignTop="@+id/general_button"
        android:layout_toEndOf="@+id/general_button"
        android:background="@color/blue"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/andamento_media_ponderata"
        android:id="@+id/andamento_media_ponderata_button"
        android:layout_below="@+id/general_button"
        android:layout_alignStart="@+id/general_button"
        android:background="@color/blue"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="@dimen/button_menu_size"
        android:layout_height="@dimen/button_menu_size"
        android:text="@string/andamento_media_aritmetica"
        android:id="@+id/andamento_media_aritmetica_button"
        android:layout_alignTop="@+id/andamento_media_ponderata_button"
        android:layout_alignStart="@+id/andamento_voti_button"
        android:background="@color/blue"
        android:textColor="@color/white"
        />

</RelativeLayout>